--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <main>
         <section>
             <div class="game">
                 <div class="infos">
-                    <div class="score"><p>Score: 00</p></div>
-                    <div><p>something</p></div>
+                    <div class="score">
+                        <p>Score: 00</p>
+                    </div>
+                    <div>
+                        <p>something</p>
+                    </div>
                     <div class="time">Time: 00</div>
 
                 </div>
                 <div class="board">
-                    <div class="block"></div>
+                  
                 </div>
             </div>
+            <script src="script.js"></script>
         </section>
     </main>
 </body>
+
 </html>
