--- a/index.html
+++ b/index.html
@@ -26,9 +26,23 @@
                   
                 </div>
             </div>
-            <script src="script.js"></script>
         </section>
+        <div class="modal">
+            <div class="start-game">
+                <h2>Welcome to the Snake Game</h2>
+                <button class="btn btn-start">Start Game</button>
+            </div>
+
+            <div class="end-game">
+                <h2>Game Over</h2>
+                <p>Your final score is: <span id ="final-score">0</span></p>
+                <button class="tbn-restart">Restart</button>
+            </div>
+        </div>
+
+        
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
