Snake game completion

--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
         <section>
             <div class="game">
                 <div class="infos">
+                    <div class="highScore">
+                        <p>High Score:
+                            <span id="highScore">00</span></p>
+                    </div>
                     <div class="score">
-                        <p>Score: 00</p>
+                        <p>Score:
+                            <span id="score">00</span>
+                        </p>
                     </div>
-                    <div>
-                        <p>something</p>
+                    <div class="time">Time: 
+                        <span id="time">00-00</span>
                     </div>
-                    <div class="time">Time: 00</div>
 
                 </div>
                 <div class="board">
@@ -36,7 +41,7 @@
             <div class="end-game">
                 <h2>Game Over</h2>
                 <p>Your final score is: <span id ="final-score">0</span></p>
-                <button class="tbn-restart">Restart</button>
+                <button class="btn btn-restart">Restart</button>
             </div>
         </div>
 
